// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders 1`] = `
<div
  className="sc-bczRLJ iDpicH"
>
  <a
    className="sc-eCYdqJ sc-jSMfEi kYfFWP bYfIap"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="sc-gsnTZi hkopcK"
      color="primary"
      size="medium"
    >
      Applications
    </span>
  </a>
</div>
`;

exports[`snapshots renders child route 1`] = `
<div
  className="sc-bczRLJ iDpicH"
>
  <a
    className="sc-eCYdqJ sc-jSMfEi kYfFWP bYfIap"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="sc-gsnTZi hkopcK"
      color="primary"
      size="medium"
    >
      Applications
    </span>
  </a>
  <div
    className="sc-bczRLJ iDpicH sc-dkzDqf fphFew"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <a
    className="sc-eCYdqJ sc-jSMfEi kYfFWP bYfIap"
    href="/kustomization?name=flux"
    onClick={[Function]}
  >
    <span
      className="sc-gsnTZi cZFkGq"
      color="primary"
      size="medium"
    >
      flux
    </span>
  </a>
</div>
`;

exports[`snapshots renders on the root page 1`] = `
<div
  className="sc-bczRLJ iDpicH"
>
  <a
    className="sc-eCYdqJ sc-jSMfEi kYfFWP bYfIap"
    href="/"
    onClick={[Function]}
  >
    <span
      className="sc-gsnTZi hkopcK"
      color="primary"
      size="medium"
    />
  </a>
</div>
`;
